fix server-card flex spacing

--- a/src/ServerTest.scss
+++ b/src/ServerTest.scss
@@ -13,7 +13,7 @@
 .server-card {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background: #323232;
   padding: 1rem;
   margin: 0rem 0rem;
